--- a/css/add-person.css
+++ b/css/add-person.css
@@ -1,29 +1,27 @@
 @import "https://fonts.googleapis.com/css?family=Raleway";
 * { box-sizing: border-box; }
-#contactForm { 
-  display: none;
-  border: 6px solid salmon; 
-  padding: 2em;
-  width: 400px;
-  text-align: center;
-  background: #fff;
-  position: fixed;
-  top:50%;
-  left:50%;
-  transform: translate(-50%,-50%);
-  -webkit-transform: translate(-50%,-50%)
+.contactForm { 
+  border: 3px solid rgb(185, 119, 97);
+  padding-left: 35%;
+  padding-top:30px;
+  padding-bottom:30px;
+  margin-bottom: 20px;
+  width: 100%;
+  background: rgb(185, 185, 185);
+  height:100%;
+  overflow-y: auto;
 }
 input, textarea { 
   margin: .8em auto;
   font-family: inherit; 
   text-transform: inherit; 
   font-size: inherit;
-  
+  float:relative;  
   display: block; 
   width: 280px; 
   padding: .4em;
 }
-textarea { height: 80px; resize: none; }
+textarea { height: 120px; resize: none; }
 .formBtn { 
   width: 140px;
   display: inline-block;
