--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body,html{
 .navigator a{
  overflow: hidden;   
  color:black;
- padding-left:25%;
+ padding-left:15%;
  font-family: Arial;
  font-size: 30px;
 }
@@ -43,6 +43,17 @@ body,html{
     padding-right:5px;
     padding-left:5px;
     height: 100%;
+}
+.rightside-add{
+    background-color: #e5e7eb;
+    overflow-y:auto;
+    display: flex;
+    flex-flow: row wrap;
+    padding-top:50px;
+    padding-right:5px;
+    padding-left:5px;
+    height: 100%;
+    overflow: hidden;
 }
 .card{
     border-radius: 5px;
@@ -80,14 +91,14 @@ body,html{
 .rightsideSecond{
     background-color: #e5e7eb;
     overflow-y:auto;
-    flex-flow: row wrap;
     padding-top:0px;
     padding-right:5px;
     padding-left:0px;
     height: 100%;
-    overflow-y: auto;  
+    overflow-y: hidden;  
     display: -webkit-flex;
     display: flex;  
+    flex-flow: row wrap;
 }
 .cardSecond{
     border-right: 3px solid #619eb6;
@@ -111,19 +122,18 @@ body,html{
     padding: 5px;
 }
 .buttonAdd{
-    margin-top:0px;
     font-size: 60px; 
     border: none;
-    padding:3px;
+    padding:2px;
     background-color:rgb(127, 211, 94);
     color: rgb(196, 209, 216);
     width:100%;
-    height:100px;
+    height:85px;
     display: inline-block;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);        
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   }
 .cardnameSecond {
-    background: rgb(230, 109, 62);
+    background: rgb(185, 185, 185);
     color:white;
   }
 .personReports{
@@ -154,4 +164,47 @@ body,html{
     float:left;
     -webkit-flex: 1;
     flex: 1;
+}
+.form-newReport{
+    height: 100%;
+    overflow-y: auto;
+    display: flex;        
+    flex-direction: column; 
+    /* justify-content: center;  */
+    align-items: center;     
+}
+#date{
+    flex-direction: row; 
+    width:150px;
+    text-align: center
+}
+.addLocation{
+    width:300px;    
+    padding: 15px;
+    background-color: rgb(127, 211, 94);
+    color:white;
+    font-size:24px;
+}
+.submit{
+    width:100%;
+    padding: 15px;
+    background-color: rgb(127, 211, 94);
+    color:white;
+    font-size:24px;
+    text-align: center;
+}
+#map{
+    min-height: 300px;
+    width: 640px;
+}
+#mapsearch{
+    width:300px;
+    text-align: center;    
+}
+.rowDate{
+    flex-direction: column; 
+}
+.buttom-costs{
+ widows: 91px;
+ padding:10px;
 }
